[tool.poetry]
name = "pythonproject"
version = "0.1.0"
description = ""
authors = ["Zachary Galeaz <zachjgal@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.9"
jupyter = "^1.0.0"
torch = "^2.0.1"
scipy = "^1.11.1"
torchvision = "^0.15.2"
tqdm = "^4.65.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
